--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -1,4 +1,4 @@
-name: deploy-container-1
+name: deploy-container
 
 on:
   push:
@@ -19,6 +19,13 @@ jobs:
       - uses: actions/checkout@v2
       - run: npm install
       - run: npm run build
+            
+      # - uses: chrislennon/action-aws-cli@v1.1
+      # - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
       - name: Copy files to the test website with the AWS CLI
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
@@ -28,5 +35,4 @@ jobs:
       - with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          # aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }} # if you have/need it
           aws-region: us-east-1
