--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -27,12 +27,10 @@ jobs:
       #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       #     ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 
-      - name: Copy files to the test website with the AWS CLI
       - run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
 
-      - name: Configure AWS Credentials
       - uses: aws-actions/configure-aws-credentials@v1
-      - with:
+        with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
